Fixed the sorting for Patients Table and Added "Add" dialog for patients

--- a/ui/src/app/pages/patients-page/patients-page.component.html
+++ b/ui/src/app/pages/patients-page/patients-page.component.html
@@ -1,1 +1,7 @@
+<div class="button-container">
+  <button mat-raised-button (click)="addPatient()" class="button">
+    Add patient
+  </button>
+</div>
+
 <app-patients-table></app-patients-table>
