--- a/ui/src/app/components/patients-table/patients-table.component.html
+++ b/ui/src/app/components/patients-table/patients-table.component.html
@@ -1,5 +1,6 @@
+
 <div class="mat-elevation-z8">
-  <table mat-table class="full-width-table" matSort aria-label="Elements">
+  <table mat-table class="full-width-table" matSort matSortActive="family" matSortDisableClear matSortDirection="asc" aria-label="Elements">
     <!-- Family Name Column -->
     <ng-container matColumnDef="family">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Family Name</th>
@@ -34,6 +35,16 @@
     <ng-container matColumnDef="phone">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Phone</th>
       <td mat-cell *matCellDef="let row">{{row.phone}}</td>
+    </ng-container>
+
+    <!-- Action Column -->
+    <ng-container matColumnDef="action">
+      <th mat-header-cell *matHeaderCellDef>Action</th>
+      <td mat-cell *matCellDef="let row">
+        <button mat-raised-button (click)="viewPatient()" class="button">
+          View
+        </button>
+      </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
