--- a/ui/src/app/components/patients-table/patients-table.component.html
+++ b/ui/src/app/components/patients-table/patients-table.component.html
@@ -1,6 +1,6 @@
 
 <div class="mat-elevation-z8">
-  <table mat-table class="full-width-table" matSort matSortActive="family" matSortDisableClear matSortDirection="asc" aria-label="Elements">
+  <table mat-table class="full-width-table" matSortActive="family" matSortDisableClear matSortDirection="asc" matSort aria-label="Elements">
     <!-- Family Name Column -->
     <ng-container matColumnDef="family">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Family Name</th>
