Created patient-record-page and routing with params

--- a/ui/src/app/components/add-patient-dialog/add-patient-dialog.component.css
+++ b/ui/src/app/components/add-patient-dialog/add-patient-dialog.component.css
@@ -1,7 +1,7 @@
 .dialogFieldRows {
   display: flex;
-  justify-content: center;
   flex-direction: row;
+  justify-content: space-between;
 }
 
 .dialogContents {
