Finished CRUD communication with mpatients, snack bar halfway implemented

--- a/ui/src/app/pages/home-page/home-page.component.html
+++ b/ui/src/app/pages/home-page/home-page.component.html
@@ -1,1 +1,4 @@
-<p>home-page-component works!</p>
+<p><b>Welcome to the patients records of Abernathy's clinic !</b></p>
+<p>This records are accessible to all authorized medical professionals of the clinic, please be careful with the data.</p>
+<p>This web application is powered by Mediscreen™.</p>
+<p><i>Respect and enjoy the peace.</i></p>
