Created CRUD controller for mhistory, misc fixes, consultations note page in ui WIP

--- a/ui/src/app/pages/note-page/note-page.component.html
+++ b/ui/src/app/pages/note-page/note-page.component.html
@@ -1,3 +1,6 @@
+<!--TODO Implement the form for notes-->
+
+<!--
 <mat-card [formGroup]="form">
   <mat-card-header>
     <mat-card-title>{{currentPatient.given}} {{currentPatient.family}}</mat-card-title>
@@ -55,3 +58,4 @@
     </div>
   </mat-card-actions>
 </mat-card>
+-->
