--- a/ui/src/app/pages/patient-record-page/patient-record-page.component.html
+++ b/ui/src/app/pages/patient-record-page/patient-record-page.component.html
@@ -1,3 +1,3 @@
-  <app-patient-info [currentPatient]="patient"></app-patient-info>
-
+<app-patient-info [currentPatient]="patient"></app-patient-info>
+<app-history-table [currentPatient]="patient"></app-history-table>
 
