Lastest updates return chadiv

--- a/ui/src/app/components/history-table/history-table.component.css
+++ b/ui/src/app/components/history-table/history-table.component.css
@@ -10,3 +10,12 @@
 #history  {
   margin-top: 10px;
 }
+
+#trash  {
+  margin-left: 10px;
+}
+
+.actions {
+  display: flex;
+  justify-content: flex-start;
+}
