--- a/ui/src/app/components/patient-info/patient-info.component.html
+++ b/ui/src/app/components/patient-info/patient-info.component.html
@@ -47,8 +47,8 @@
   </mat-card-content>
   <mat-card-actions class="centered">
     <div class="button-div">
-      <button mat-raised-button (click)="onReset()">Reset</button>
-      <button id="update" mat-raised-button color="primary" [disabled]="form.invalid" (click)="onUpdate()">Update</button>
+      <button  mat-raised-button color="primary" [disabled]="form.invalid" (click)="onUpdate()">Update</button>
+      <button id="reset" mat-raised-button (click)="onReset()">Reset</button>
     </div>
     <div class="button-div">
       <button mat-raised-button color="warn" (click)="onDelete()">Delete</button>
