--- a/ui/src/app/pages/patients-page/patients-page.component.html
+++ b/ui/src/app/pages/patients-page/patients-page.component.html
@@ -1,5 +1,5 @@
 <div class="button-container">
-  <button mat-raised-button (click)="addPatient()" class="button">
+  <button mat-raised-button color="primary" (click)="addPatient()" class="button">
     Add patient
   </button>
 </div>
