--- a/ui/src/styles.css
+++ b/ui/src/styles.css
@@ -2,3 +2,7 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.cdk-text-field-autofill-monitored {
+  white-space: pre-wrap!important;
+}
