--- a/ui/src/app/components/history-table/history-table.component.html
+++ b/ui/src/app/components/history-table/history-table.component.html
@@ -3,46 +3,51 @@
     <mat-card-title>Consultations History</mat-card-title>
   </mat-card-header>
   <mat-card-content>
-<div>
-  <table mat-table class="full-width-table" matSort aria-label="Elements">
-    <!-- Id Column -->
-    <ng-container matColumnDef="title">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Title</th>
-      <td mat-cell *matCellDef="let row">{{row.title | titlecase}}</td>
-    </ng-container>
+    <div>
+      <table mat-table class="full-width-table" matSort aria-label="Elements">
+        <!-- Id Column -->
+        <ng-container matColumnDef="title">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Title</th>
+          <td mat-cell *matCellDef="let row">{{row.title | titlecase}}</td>
+        </ng-container>
 
-    <!-- Name Column -->
-    <ng-container matColumnDef="dateTime">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Date</th>
-      <td mat-cell *matCellDef="let row">{{row.dateTime | date: 'dd/MM/yyyy, HH:mm'}}</td>
-    </ng-container>
+        <!-- Name Column -->
+        <ng-container matColumnDef="dateTime">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Date</th>
+          <td mat-cell *matCellDef="let row">{{row.dateTime | date: 'dd/MM/yyyy, HH:mm'}}</td>
+        </ng-container>
 
-    <!-- Action Column -->
-    <ng-container matColumnDef="action">
-      <th mat-header-cell *matHeaderCellDef>Action</th>
-      <td mat-cell *matCellDef="let row">
-        <button mat-raised-button (click)="viewNote(row.id)" class="button">
-          View
-        </button>
-      </td>
-    </ng-container>
+        <!-- Action Column -->
+        <ng-container matColumnDef="action">
+          <th mat-header-cell *matHeaderCellDef>Action</th>
+          <td mat-cell *matCellDef="let row">
+            <div class="actions">
+            <button mat-icon-button (click)="viewNote(row.id)" class="button">
+              <mat-icon>open_in_new</mat-icon>
+            </button>
+            <button id="trash" mat-icon-button (click)="deleteNote(row.id)">
+              <mat-icon>delete_forever</mat-icon>
+            </button>
+            </div>
+          </td>
+        </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-  </table>
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      </table>
 
-  <mat-paginator #paginator
-      [length]="dataSource?.data?.length"
-      [pageIndex]="0"
-      [pageSize]="10"
-      [pageSizeOptions]="[5, 10, 20]"
-      aria-label="Select page">
-  </mat-paginator>
-</div>
+      <mat-paginator #paginator
+                     [length]="dataSource?.data?.length"
+                     [pageIndex]="0"
+                     [pageSize]="10"
+                     [pageSizeOptions]="[5, 10, 20]"
+                     aria-label="Select page">
+      </mat-paginator>
+    </div>
   </mat-card-content>
   <mat-card-actions class="centered">
     <div class="button-div">
-      <button mat-raised-button (click)="addNote()">Add Note</button>
+      <button mat-raised-button color="primary" (click)="addNote()">Add Note</button>
     </div>
   </mat-card-actions>
 </mat-card>
