--- a/ui/src/app/components/patients-table/patients-table.component.html
+++ b/ui/src/app/components/patients-table/patients-table.component.html
@@ -41,8 +41,8 @@
     <ng-container matColumnDef="action">
       <th mat-header-cell *matHeaderCellDef>Action</th>
       <td mat-cell *matCellDef="let row">
-        <button mat-raised-button (click)="viewPatient(row.family, row.given)" class="button">
-          View
+        <button mat-icon-button (click)="viewPatient(row.family, row.given)" class="button">
+          <mat-icon>open_in_new</mat-icon>
         </button>
       </td>
     </ng-container>
