--- a/ui/src/app/patients/components/history-table/history-table.component.css
+++ b/ui/src/app/patients/components/history-table/history-table.component.css
@@ -19,3 +19,12 @@
   display: flex;
   justify-content: flex-start;
 }
+
+#trash  {
+  margin-left: 10px;
+}
+
+.actions {
+  display: flex;
+  justify-content: flex-start;
+}
