Fixes to 'ui' module's structure, starting implementing the assessment feature

--- a/ui/src/app/history/note-page/note-page.component.css
+++ b/ui/src/app/history/note-page/note-page.component.css
@@ -1,3 +1,7 @@
+button  {
+  margin-right: 10px;
+}
+
 .cardFieldRows {
   display: flex;
   flex-direction: row;
@@ -34,3 +38,4 @@
   margin-left: 10px;
   margin-right: 10px;
 }
+
