--- a/ui/src/app/history/note-page/note-page.component.html
+++ b/ui/src/app/history/note-page/note-page.component.html
@@ -6,20 +6,21 @@
       <mat-form-field class="formFields">
         <mat-label>Title</mat-label>
         <input matInput formControlName="title">
+        <mat-hint>(1-100 chars)</mat-hint>
       </mat-form-field>
 
       <mat-form-field class="formFields">
         <mat-label>Content</mat-label>
         <textarea class="text-style" rows="10" matInput formControlName="content"></textarea>
+        <mat-hint>(1-8000 chars)</mat-hint>
       </mat-form-field>
 
   </mat-card-content>
   <mat-card-actions class="centered">
     <div class="button-div">
-      <button mat-raised-button (click)="onCancel()">Cancel</button>
+      <button mat-raised-button (click)="onBack()">Back</button>
       <button mat-raised-button (click)="onReset()">Reset</button>
-      <button mat-raised-button color="primary" (click)="onSave()">Save</button>
-      <!--<button id="update" mat-raised-button color="primary" [disabled]="form.invalid" (click)="onUpdate()">Update</button>-->
+      <button mat-raised-button color="primary" [disabled]="form.invalid" (click)="onSave()">Save</button>
     </div>
   </mat-card-actions>
 </mat-card>
