--- a/ui/src/app/features/patients/pages/patient-record-page/patient-record-page.component.css
+++ b/ui/src/app/features/patients/pages/patient-record-page/patient-record-page.component.css
@@ -1,4 +1,5 @@
-#cards {
-  flex-direction: column;
-  justify-content: center;
+mat-spinner {
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 20%;
 }
