--- a/ui/src/app/general/components/snack-bar/snack-bar.component.html
+++ b/ui/src/app/general/components/snack-bar/snack-bar.component.html
@@ -1,6 +1,6 @@
 <div id="snack-bar">
 <div matSnackBarLabel>
-  Message
+  {{data}}
 </div>
 <div matSnackBarActions>
   <button mat-button matSnackBarAction (click)="snackBarRef.dismissWithAction()"><mat-icon>close</mat-icon></button>
