--- a/ui/src/app/features/history/components/history-table/history-table.component.html
+++ b/ui/src/app/features/history/components/history-table/history-table.component.html
@@ -5,13 +5,13 @@
   <mat-card-content>
     <div>
       <table mat-table class="full-width-table" matSort aria-label="Elements">
-        <!-- Id Column -->
+        <!-- TitleColumn -->
         <ng-container matColumnDef="title">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>Title</th>
           <td mat-cell *matCellDef="let row">{{row.title | titlecase}}</td>
         </ng-container>
 
-        <!-- Name Column -->
+        <!-- Date Column -->
         <ng-container matColumnDef="dateTime">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>Date</th>
           <td mat-cell *matCellDef="let row">{{row.dateTime | date: 'dd/MM/yyyy, HH:mm'}}</td>
