--- a/ui/src/app/features/patients/components/patient-info/patient-info.component.html
+++ b/ui/src/app/features/patients/components/patient-info/patient-info.component.html
@@ -1,6 +1,6 @@
 <mat-card [formGroup]="form">
   <mat-card-header>
-    <mat-card-title>{{currentPatient.given}} {{currentPatient.family}}</mat-card-title>
+    <mat-card-title>Patient Information</mat-card-title>
   </mat-card-header>
   <mat-card-content>
     <div class="cardFieldRows">
@@ -45,8 +45,6 @@
       </mat-form-field>
     </div>
 
-    <app-diabetes-assessment [currentPatient]="currentPatient"></app-diabetes-assessment>
-
   </mat-card-content>
   <mat-card-actions class="centered">
     <div class="button-div">
@@ -58,3 +56,4 @@
     </div>
   </mat-card-actions>
 </mat-card>
+
