--- a/ui/src/app/general/components/navigation/navigation.component.html
+++ b/ui/src/app/general/components/navigation/navigation.component.html
@@ -8,7 +8,7 @@
       <a routerLink="mediscreen-abernathy" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true }" mat-list-item>Home</a>
       <a routerLink="mediscreen-abernathy/patients" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true }" mat-list-item>Patients List</a>
       <a routerLink="mediscreen-abernathy/contact" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true }" mat-list-item>Contact</a>
-      <a routerLink="mediscreen-abernathy/login" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true }" mat-list-item>Login</a>
+      <a routerLink="mediscreen-abernathy/dashboard" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true }" mat-list-item>Dashboard</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
