Full application ready for production // Added README file // Added docker files

--- a/ui/src/app/general/pages/contact-page/contact-page.component.html
+++ b/ui/src/app/general/pages/contact-page/contact-page.component.html
@@ -1,1 +1,14 @@
-<p>contact-page works!</p>
+<mat-card>
+  <mat-card-header>
+    <mat-card-title>Contact</mat-card-title>
+  </mat-card-header>
+  <mat-card-content>
+    <p>This demo application has been built using Angular CLI 16.1.7 and Spring Boot 3.1.3 by Jean-Luc Metz in September 2023
+     as the last project of his "JAVA application developer" training by OpenClassrooms.</p>
+    <p>The code is publicly accessible on GitHub (link below).</p>
+  </mat-card-content>
+  <mat-card-actions id="actions">
+    <a href="https://github.com/mactepluke/abernathy-clinic" target=”_blank”><button mat-raised-button onclick=""><mat-icon>open_in_new</mat-icon>Check GitHub repo</button></a>
+    <a href="mailto:luc.metz@icloud.com"><button id="send-email" mat-raised-button color="primary"><mat-icon>email</mat-icon> Reach out</button></a>
+  </mat-card-actions>
+</mat-card>
