--- a/ui/src/app/general/pages/home-page/home-page.component.html
+++ b/ui/src/app/general/pages/home-page/home-page.component.html
@@ -9,6 +9,6 @@
     <p>This is a DEMO application: no restrictions apply regarding account creation.</p>
   </mat-card-content>
   <mat-card-actions id="actions">
-    <button mat-raised-button color="primary" routerLink="mediscreen-abernathy/dashboard" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true }">Go to dashboard</button>
+    <button mat-raised-button color="primary" routerLink="dashboard" routerLinkActive="active" [routerLinkActiveOptions]="{exact: false }">Go to dashboard</button>
   </mat-card-actions>
 </mat-card>
