--- a/ui/src/app/features/history/components/history-table/history-table.component.html
+++ b/ui/src/app/features/history/components/history-table/history-table.component.html
@@ -5,6 +5,18 @@
   <mat-card-content>
     <div>
       <table mat-table class="full-width-table" matSort aria-label="Elements">
+
+        <!-- View Column -->
+        <ng-container matColumnDef="view">
+          <th mat-header-cell *matHeaderCellDef>View</th>
+          <td mat-cell *matCellDef="let row">
+              <button mat-icon-button (click)="viewNote(row.id)" class="button">
+                <mat-icon>open_in_new</mat-icon>
+              </button>
+          </td>
+        </ng-container>
+
+
         <!-- TitleColumn -->
         <ng-container matColumnDef="title">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>Title</th>
@@ -21,14 +33,9 @@
         <ng-container matColumnDef="action">
           <th mat-header-cell *matHeaderCellDef>Action</th>
           <td mat-cell *matCellDef="let row">
-            <div class="actions">
-            <button mat-icon-button (click)="viewNote(row.id)" class="button">
-              <mat-icon>open_in_new</mat-icon>
-            </button>
-            <button id="trash" mat-icon-button (click)="deleteNote(row.id)">
+            <button mat-icon-button (click)="deleteNote(row.id)">
               <mat-icon>delete_forever</mat-icon>
             </button>
-            </div>
           </td>
         </ng-container>
 
