--- a/ui/src/app/features/patients/components/patients-table/patients-table.component.html
+++ b/ui/src/app/features/patients/components/patients-table/patients-table.component.html
@@ -1,6 +1,17 @@
 
 <div class="mat-elevation-z8">
   <table mat-table class="full-width-table" matSortActive="family" matSortDisableClear matSortDirection="asc" matSort aria-label="Elements">
+
+    <!-- Action Column -->
+    <ng-container matColumnDef="action">
+      <th mat-header-cell *matHeaderCellDef>View</th>
+      <td mat-cell *matCellDef="let row">
+        <button mat-icon-button (click)="viewPatient(row.family, row.given)" class="button">
+          <mat-icon>open_in_new</mat-icon>
+        </button>
+      </td>
+    </ng-container>
+
     <!-- Family Name Column -->
     <ng-container matColumnDef="family">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Family Name</th>
@@ -35,16 +46,6 @@
     <ng-container matColumnDef="phone">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Phone</th>
       <td mat-cell *matCellDef="let row">{{row.phone | nullToDash}}</td>
-    </ng-container>
-
-    <!-- Action Column -->
-    <ng-container matColumnDef="action">
-      <th mat-header-cell *matHeaderCellDef>Action</th>
-      <td mat-cell *matCellDef="let row">
-        <button mat-icon-button (click)="viewPatient(row.family, row.given)" class="button">
-          <mat-icon>open_in_new</mat-icon>
-        </button>
-      </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
