--- a/ui/src/app/features/history/components/history-table/history-table.component.html
+++ b/ui/src/app/features/history/components/history-table/history-table.component.html
@@ -10,12 +10,11 @@
         <ng-container matColumnDef="view">
           <th mat-header-cell *matHeaderCellDef>View</th>
           <td mat-cell *matCellDef="let row">
-              <button mat-icon-button (click)="viewNote(row.id)" class="button">
+              <button mat-icon-button (click)="viewNote(row.id)">
                 <mat-icon>open_in_new</mat-icon>
               </button>
           </td>
         </ng-container>
-
 
         <!-- TitleColumn -->
         <ng-container matColumnDef="title">
@@ -52,9 +51,7 @@
       </mat-paginator>
     </div>
   </mat-card-content>
-  <mat-card-actions class="centered">
-    <div class="button-div">
+  <mat-card-actions>
       <button mat-raised-button color="primary" (click)="addNote()">Add Note</button>
-    </div>
   </mat-card-actions>
 </mat-card>
