--- a/ui/src/app/features/history/pages/note-page/note-page.component.html
+++ b/ui/src/app/features/history/pages/note-page/note-page.component.html
@@ -16,11 +16,9 @@
       </mat-form-field>
 
   </mat-card-content>
-  <mat-card-actions class="centered">
-    <div class="button-div">
-      <button mat-raised-button (click)="onBack()">Back</button>
-      <button mat-raised-button (click)="onReset()">Reset</button>
-      <button mat-raised-button color="primary" [disabled]="form.invalid" (click)="onSave()">Save</button>
-    </div>
+  <mat-card-actions>
+      <button class="buttons" mat-raised-button (click)="onBack()">Back</button>
+      <button class="buttons" mat-raised-button (click)="onReset()">Reset</button>
+      <button class="buttons" mat-raised-button color="primary" [disabled]="form.invalid" (click)="onSave()">Save</button>
   </mat-card-actions>
 </mat-card>
