--- a/ui/src/app/features/patients/components/patients-table/patients-table.component.html
+++ b/ui/src/app/features/patients/components/patients-table/patients-table.component.html
@@ -1,5 +1,4 @@
-
-<div class="mat-elevation-z8">
+<mat-card id="patients">
   <table mat-table class="full-width-table" matSortActive="family" matSortDisableClear matSortDirection="asc" matSort aria-label="Elements">
 
     <!-- Action Column -->
@@ -59,4 +58,4 @@
       [pageSizeOptions]="[5, 10, 20]"
       aria-label="Select page">
   </mat-paginator>
-</div>
+</mat-card>
